# vigil

./: .gitignore  Makefile  README.md
docs/plans/: 2026-03-28-autonomous-finetuning-platform.md
infra/: docker-compose.test.yml  docker-compose.yml
infra/kafka/: init-topics.sh
infra/redis/: redis.conf
rust/side_channel/: Cargo.toml
rust/side_channel/src/: capture.rs  config.rs  lib.rs  main.rs  metrics.rs  publisher.rs
rust/side_channel/tests/: integration_test.rs
services/deployer/: engine.py  main.py  redis_coordinator.py  requirements.txt  rollback.py  state_machine.py  vllm_client.py
services/drift_detector/: __init__.py  alerting.py  baseline.py  detector.py  main.py  requirements.txt  scorer.py
services/evaluator/: __init__.py  behavioral.py  benchmarks.py  gate.py  improvement.py  main.py  requirements.txt  safety.py
services/observability/: __init__.py  alerting.py  api.py  lineage.py  main.py  metrics.py  requirements.txt
services/orchestrator/: __init__.py  loop.py  main.py  requirements.txt  state_machine.py  triggers.py
services/synthesizer/: __init__.py  amplifier.py  clustering.py  config.py  embedding.py  judge.py  main.py  pipeline.py  requirements.txt
services/trainer/: __init__.py  checkpointing.py  cost_tracker.py  dataset.py  dpo.py  gpu_provisioner.py  main.py  orchestrator.py  qlora_config.py  requirements.txt  sft.py
shared/schemas/: events.py
tests/integration/: test_deployment_engine.py  test_drift_pipeline.py  test_evaluation_gate.py  test_loop_orchestrator.py  test_synthesis_pipeline.py  test_training_orchestrator.py
tests/unit/: test_clustering.py  test_deployer.py  test_dpo.py  test_drift_detector.py  test_evaluator.py  test_observability.py  test_sft.py  test_synthesizer.py
